structural-typing/tests/ui/nested_duplicate_rejected.stderr
error: duplicate nested field name 'data'
  --> tests/ui/nested_duplicate_rejected.rs:12:27
   |
12 |     #[nested(inner: data, data)]
   |                           ^^^^
